// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandError can render component and create errors file 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: tomo-errors.txt,
            type: file
        }
    ],
    type: directory
}
"
`;

exports[`CommandError can render component and create errors file 2`] = `
"
 [1m[31m✖ [22m[39mSomething has gone horribly [1m[31mwrong[39m[22m
   ↳ Details written to ./tomo-errors.txt"
`;

exports[`Sub Command Multi-select Component can render 1`] = `
"
 ...press spacebar to select items


 [36mSelect the A item[39m

 [1m[36m→[39m[22m [36m [39m [1m[36mItem A[39m[22m
   [36m [39m [37mItem B[39m
   [36m [39m [37mItem C[39m
"
`;

exports[`Sub Command Multi-select Component can render selected items 1`] = `
"
 selected › Item B
  ↳ press ENTER to see suggestions

 [36m[2mSorry, I don't have anything to say about[22m Item B[39m

   [36m [39m [37mItem A[39m
 [1m[36m→[39m[22m [36m✔[39m [1m[36mItem B[39m[22m
   [36m [39m [37mItem C[39m
"
`;

exports[`Sub Command Multi-select Component can render selected items 2`] = `
"
 selected › Item A, Item B
  ↳ press ENTER to see suggestions

 [36mSelect the A item[39m

 [1m[36m→[39m[22m [36m✔[39m [1m[36mItem A[39m[22m
   [36m✔[39m [37mItem B[39m
   [36m [39m [37mItem C[39m
"
`;

exports[`Sub Command Multi-select Component can render unknown items 1`] = `
"
 ...press spacebar to select items


 [36m[2mSorry, I don't have anything to say about[22m Item A[39m

 [1m[36m→[39m[22m [36m [39m [1m[36mItem A[39m[22m
   [36m [39m [37mItem B[39m
   [36m [39m [37mItem C[39m
"
`;

exports[`Task component can render (completed) 1`] = `"   [1m[31m✔ [22m[39mtest task text"`;

exports[`Task component can render (errored) 1`] = `"   [1m[31m✖ [22m[39mtest task text"`;

exports[`Task component can render (pending) 1`] = `"   [36m⠋ [39mtest task text"`;

exports[`Task component can render (skipped) 1`] = `"   [1m[37m․ [22m[39mtest task text"`;

exports[`Task component can render with default text 1`] = `"   [1m[31m✔ [22m[39mtask description"`;

exports[`Warning can render 1`] = `
"
 [33m╭─────────╮[39m
 [33m│[39m oops... [33m│[39m
 [33m╰─────────╯[39m

    ↳ Hello World

      Press [1mENTER[22m to continue
"
`;

exports[`populateQueue function can only run tasks that pass condition 1`] = `
Object {
  "foo": "bar",
  "isNotOffline": true,
}
`;

exports[`populateQueue function can only run tasks that pass condition 2`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "online": true,
      },
      "type": "status",
    },
  ],
  Array [
    Object {
      "payload": 0,
      "type": "complete",
    },
  ],
  Array [
    Object {
      "payload": 1,
      "type": "skipped",
    },
  ],
  Array [
    Object {
      "payload": 2,
      "type": "complete",
    },
  ],
  Array [
    Object {
      "payload": 3,
      "type": "skipped",
    },
  ],
]
`;

exports[`populateQueue function can run tasks with options and dispatch task results 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "online": true,
      },
      "type": "status",
    },
  ],
  Array [
    Object {
      "payload": 0,
      "type": "complete",
    },
  ],
  Array [
    Object {
      "payload": 1,
      "type": "complete",
    },
  ],
  Array [
    Object {
      "payload": 2,
      "type": "complete",
    },
  ],
]
`;

exports[`populateQueue function dedupes tasks based on text value 1`] = `
Array [
  Array [
    Object {
      "payload": Object {
        "online": true,
      },
      "type": "status",
    },
  ],
  Array [
    Object {
      "payload": 0,
      "type": "complete",
    },
  ],
]
`;
